objects/Estimate_Line_Items__c/Estimate_Line_Items__c.object-meta.xml
<CustomObject>
    <description>This is Estimate Line Item object.</description>
    <label>Estimate Line Item</label>
    <nameField>
        <label>Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimate Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>