objects/Estimate_Line_Items__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Description</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Estimate</relationshipName>
    <type>Lookup</type>
</CustomField>