objects/Estimate_Line_Items__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <label>PO #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>