objects/Estimate_Line_Items__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipName>Estimate</relationshipName>
    <type>Lookup</type>
</CustomField>