objects/Estimate_Line_Items__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Estimate Line Items</relationshipLabel>
    <relationshipName>Estimate_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>