objects/Estimate_Line_Items__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>IF( Unit_Type__c =&quot;Project&quot;, Amount__c , (Amount__c  *   Quantity__c ))</formula>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>