objects/Estimate_Line_Items__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <formula>Text( GL_Code__r.Unit_Type__c )</formula>
    <label>Unit Type</label>
    <type>Text</type>
</CustomField>