objects/Estimate_Line_Items__c/recordTypes/Estimate_Copied_from_Quote.recordType-meta.xml
<RecordType>
    <fullName>Estimate_Copied_from_Quote</fullName>
    <active>true</active>
    <label>Estimate Copied from Quote</label>
</RecordType>