objects/Estimate_Line_Items__c/recordTypes/When_Approved.recordType-meta.xml
<RecordType>
    <fullName>When_Approved</fullName>
    <active>true</active>
    <label>When Approved</label>
</RecordType>