objects/Estimate_Line_Items__c/recordTypes/When_UnApproved.recordType-meta.xml
<RecordType>
    <fullName>When_UnApproved</fullName>
    <active>true</active>
    <description>When any ELI Unapproved its Page layout will be changed</description>
    <label>When UnApproved</label>
</RecordType>