objects/Estimate_Line_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PO__c</columns>
    <columns>PO_Created__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>